crates/ditto-checker/tests/golden/type-errors/unification_error_0.ditto
module Test exports (..)

five : Int = 5.0
